<resources>
    <string name="app_name">InventoryApp</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all">Delete all</string>
    <string name="delete">Delete</string>
    <string name="save">save</string>
    <string name="cant_save">Ups, we can not save data</string>
    <string name="save_sucessfull">Item successfully save</string>
    <string name="add_item_title">Add Item</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="empty_messege">Your storage is empty</string>
    <string name="lets_start">Let\'s start adding some items</string>
    <string name="order_more">Order More</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="item_quantity">Item Quantity:</string>
    <string name="contact">Item Seller Contact:</string>
    <string name="item_seller">Item Seller:</string>
    <string name="item_price">Item Price:</string>
    <string name="item_name">Item Name:</string>
    <string name="sale">Sale</string>
    <string name="quantity">Quantity</string>
    <string name="cant_add">ups can not change quantity</string>
    <string name="cant_change_quantity">ups, can not change quantity</string>
    <string name="out_of_stock">Item out of stock</string>
    <string name="error_deleting">Error deleting Item</string>
    <string name="deleted">Item deleted</string>
    <string name="deleting_unsucessful">Error Occurred, deleting unsuccessful</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="supplier">Supplier</string>
    <string name="quantity_on_hand">Quantity on hand</string>
    <string name="price">Price</string>
    <string name="save_unsecessful">Ups, we can not save changes</string>
    <string name="updated">Item Successfully updated</string>

</resources>
