<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/babyblue"
    tools:context=".ItemEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Details"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin16"
            android:layout_gravity="center_vertical" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_margin="@dimen/margin16"
                android:id="@+id/item_name"
                android:inputType="textCapWords"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:layout_margin="@dimen/margin16"
                android:id="@+id/item_price"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity_on_hand"
                android:layout_margin="@dimen/margin16"
                android:id="@+id/item_quantity"
                android:inputType="number"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin16"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_margin="@dimen/margin16"
                android:id="@+id/item_supplier_name"
                android:inputType="textCapWords"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number"
                android:layout_margin="@dimen/margin16"
                android:id="@+id/item_supplier_contact"
                android:inputType="number"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/black"/>


        </LinearLayout>
    </LinearLayout>



</LinearLayout>